[gd_scene load_steps=3 format=3 uid="uid://y6dqpprn1axq"]

[ext_resource type="Theme" uid="uid://bn4fsgp7703ut" path="res://resources/ui/ui_theme.tres" id="1_bvplr"]
[ext_resource type="Script" path="res://scripts/managers/main_menu_manager.gd" id="2_c8wj3"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_bvplr")
script = ExtResource("2_c8wj3")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = 774.0
offset_top = 488.0
offset_right = 1160.0
offset_bottom = 848.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="ContinueRun" type="Button" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 70
text = "Continue Run"

[node name="StartNewRun" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 70
text = "Start New Run"

[node name="Settings" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 70
text = "Settings"

[node name="Exit" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 70
text = "Exit"

[connection signal="button_down" from="MarginContainer/VBoxContainer/ContinueRun" to="." method="_on_continue_run_button_down"]
[connection signal="button_down" from="MarginContainer/VBoxContainer/StartNewRun" to="." method="_on_start_new_run_button_down"]
[connection signal="button_down" from="MarginContainer/VBoxContainer/Settings" to="." method="_on_settings_button_down"]
[connection signal="button_down" from="MarginContainer/VBoxContainer/Exit" to="." method="_on_exit_button_down"]
